--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
 <head>
     <meta charset="utf-8">
     <title>CV DEMO</title>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    Hello World
+    <div class="left">
+        <div class="input">
+            <div class="status">
+                <p id="state">録画停止 残り</p>
+                <p id="time">00</p>
+                <p>秒</p>
+            </div>
+            <div class="form">
+                録画時間：<input type="number" value="60" id="timeInput"> 秒
+            </div>
+            <div class="form">
+                <input type="search" id="input">
+                <button onclick="start()">録画開始</button>
+            </div>
+        </div>
+        <div class="log">
+            <h2>録画履歴</h2>
+            <div class="list" id="log"></div>
+        </div>
+    </div>
+    <div class="right">
+        <div class="main">Hellow World</div>
+    </div>
+
+    <script src="script/main.js"></script>
 </body>
+
 
 </html>
