--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 録画時間：<input type="number" value="60" id="timeInput"> 秒
             </div>
             <div class="form">
-                <input type="search" id="input">
-                <button onclick="start()">録画開始</button>
+                商品番号：<input type="search" id="input">
             </div>
         </div>
         <div class="log">
@@ -29,10 +28,13 @@
         </div>
     </div>
     <div class="right">
-        <div class="main">Hellow World</div>
+        <div class="main">
+            <video id="camera"></video>
+        </div>
     </div>
 
-    <script src="script/main.js"></script>
+    <script src="script/main.js" type="module"></script>
+    <script src="script/Recorder.js" type="module"></script>
 </body>
 
 
