iOSで入力ができない問題を修正する

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             <div class="form">
                 録画時間：<input type="number" value="60" id="timeInput"> 秒
             </div>
-            <div class="form">
-                商品番号：<input type="search" id="input">
-            </div>
+            <form action="/">
+                <div class="form">
+                    商品番号：<input type="text" id="input">
+                </div>
+            </form>
         </div>
         <div class="log">
             <h2>録画履歴</h2>
