--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
             <div class="form">
                 録画時間：<input type="number" value="60" id="timeInput"> 秒
             </div>
-            <form action="/">
-                <div class="form">
-                    商品番号：<input type="text" id="input">
-                </div>
-            </form>
+            <div class="form">
+                商品番号：<input type="search" id="input">
+            </div>
         </div>
         <div class="log">
             <h2>録画履歴</h2>
